# AI-Agents-for-Medical-Device-Regulation

./: README.md  pyproject.toml
app/: main.py  models.py  services.py
docs/agents/: agent-charters.md  workflow-contracts.md
docs/architecture/: evidence-model.md
docs/compliance/: audit-traceability.md
docs/knowledge-base/: standards-ingestion.md
docs/product/: PRD.md  deliverable-mapping.md  intake-schema.md
docs/qms/: procedure-model.md
docs/regulatory/: scope-matrix.md
docs/risk/: iso14971-lifecycle.md
frontend/: index.html  package.json
frontend/src/: App.tsx  styles.css
frontend/src/components/: ApprovalTimeline.css  ApprovalTimeline.tsx  RiskPill.css  RiskPill.tsx  StatusBadge.css  StatusBadge.tsx  TraceabilityChip.css  TraceabilityChip.tsx  ValidationIssueList.css  ValidationIssueList.tsx  index.ts
frontend/src/lib/: api.ts  formats.ts
frontend/src/pages/: AuditTimelinePage.tsx  EvidenceStatementsPage.tsx  IntakeValidationPage.tsx  WorkflowPacketPage.tsx
frontend/src/styles/: tokens.css
tests/: test_audit_hashing.py  test_platform_mvp.py
